[gd_scene load_steps=32 format=3 uid="uid://dl6tv7oet2jxt"]

[ext_resource type="Script" uid="uid://cyybcthqo12ku" path="res://scenes/world/units/test_character.gd" id="1_hyo0f"]
[ext_resource type="Script" uid="uid://cayakk8o7fjyy" path="res://resources/empire/units/unit_stats.gd" id="2_7aerx"]
[ext_resource type="Texture2D" uid="uid://bmsh0s6amr1u8" path="res://assets/resources/unit_test.png" id="2_xb5ci"]
[ext_resource type="Script" uid="uid://bgjqylyg8052t" path="res://scenes/world/units/components/HealthComponent.gd" id="3_h141o"]
[ext_resource type="Script" uid="uid://bcmlgj2w55p8f" path="res://common/state_machine.gd" id="3_jdsxw"]
[ext_resource type="Texture2D" uid="uid://bh3kn7ed737u8" path="res://assets/units/soldier_blue.png" id="3_pm7fu"]
[ext_resource type="Texture2D" uid="uid://ydh2j76stlfe" path="res://assets/units/soldier_red.png" id="4_6hdb6"]
[ext_resource type="Script" uid="uid://bu625gum4lcu2" path="res://scenes/world/units/components/AttackComponent.gd" id="4_hyo0f"]
[ext_resource type="Script" uid="uid://dfmwd4i4cvcj5" path="res://scenes/world/units/states/unit_state_moving.gd" id="5_mlo0c"]
[ext_resource type="Script" uid="uid://bu25hbxcgqsnt" path="res://scenes/world/units/states/unit_state_conquering.gd" id="6_74vs3"]
[ext_resource type="Script" uid="uid://chixtoay5fbmj" path="res://scenes/world/units/components/MovementComponent.gd" id="6_12525"]
[ext_resource type="Script" uid="uid://jhhec70pls3g" path="res://scenes/world/units/states/unit_state_idle.gd" id="7_74vs3"]
[ext_resource type="Script" uid="uid://dfp1sreyotxeh" path="res://scenes/world/units/states/unit_state_attacking.gd" id="7_l5r3j"]
[ext_resource type="Script" uid="uid://c7ftxhy6tmrtt" path="res://scenes/world/units/animation_generator.gd" id="10_mlo0c"]

[sub_resource type="Resource" id="Resource_1dtsc"]
script = ExtResource("2_7aerx")
name = "Peasant"
description = "Weak melee unit."
level = 1
spriteSheetBlue = ExtResource("3_pm7fu")
spriteSheetRed = ExtResource("4_6hdb6")
max_hp = 20
armor = 10
speed = 100
range = 60
singleTarget = true
action = 0
actionSpeed = 0
metadata/_custom_type_script = "uid://cayakk8o7fjyy"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xb5ci"]
radius = 313.571
height = 712.857

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xb5ci"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_l2a1g"]
atlas = ExtResource("2_xb5ci")
region = Rect2(0, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_h141o"]
atlas = ExtResource("2_xb5ci")
region = Rect2(820, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyo0f"]
atlas = ExtResource("2_xb5ci")
region = Rect2(1640, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_12525"]
atlas = ExtResource("2_xb5ci")
region = Rect2(2460, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_t36qh"]
atlas = ExtResource("2_xb5ci")
region = Rect2(0, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qn0t"]
atlas = ExtResource("2_xb5ci")
region = Rect2(820, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_bud83"]
atlas = ExtResource("2_xb5ci")
region = Rect2(1640, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_vymlm"]
atlas = ExtResource("2_xb5ci")
region = Rect2(2460, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb5ci"]
atlas = ExtResource("2_xb5ci")
region = Rect2(0, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1kc6"]
atlas = ExtResource("2_xb5ci")
region = Rect2(820, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmuja"]
atlas = ExtResource("2_xb5ci")
region = Rect2(1640, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnc1u"]
atlas = ExtResource("2_xb5ci")
region = Rect2(2460, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hfjt"]
atlas = ExtResource("2_xb5ci")
region = Rect2(0, 870, 740, 730)

[sub_resource type="SpriteFrames" id="SpriteFrames_g3gjs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2a1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h141o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyo0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12525")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t36qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qn0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bud83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vymlm")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb5ci")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1kc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmuja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnc1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hfjt")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="TestCharacter" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "health_component", "attack_component", "animation", "nav_agent") groups=["units"]]
scale = Vector2(0.07, 0.07)
collision_layer = 17
collision_mask = 17
input_pickable = true
script = ExtResource("1_hyo0f")
stats = SubResource("Resource_1dtsc")
movement_component = NodePath("Components/MovementComponent")
health_component = NodePath("Components/HealthComponent")
attack_component = NodePath("Components/AttackComponent")
side = 2
animation = NodePath("AnimatedSprite2D")
nav_agent = NodePath("NavigationAgent2D")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_jdsxw")
initial_state = NodePath("Moving")
metadata/_custom_type_script = "uid://bcmlgj2w55p8f"

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("5_mlo0c")

[node name="Conquering" type="Node" parent="StateMachine"]
script = ExtResource("6_74vs3")

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource("7_l5r3j")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_74vs3")

[node name="Components" type="Node" parent="."]

[node name="MovementComponent" type="Node" parent="Components" node_paths=PackedStringArray("testCharacter")]
script = ExtResource("6_12525")
testCharacter = NodePath("../..")

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("3_h141o")

[node name="AttackComponent" type="Node" parent="Components"]
script = ExtResource("4_hyo0f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(15, 75)
shape = SubResource("CapsuleShape2D_xb5ci")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xb5ci")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 25.0
target_desired_distance = 35.0
avoidance_enabled = true
radius = 2.5
neighbor_distance = 100.0
avoidance_priority = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g3gjs")
animation = &"walk"
autoplay = "idle"
script = ExtResource("10_mlo0c")

[node name="Label" type="Label" parent="."]
offset_left = -457.143
offset_top = -528.571
offset_right = 456.857
offset_bottom = -363.571
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "State"
horizontal_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="Components/MovementComponent" method="_on_navigation_agent_2d_velocity_computed"]
